# QAT

./: LICENSE  README.md  pyproject.toml  qrelu.py  resnet50.py  train.py  utils.py
images/: resnet_arch
notebooks/: train_example_on_Kaggle.ipynb
scripts/: extract_ILSVRC_only_val.sh  getdataset.py  simple_Val_subst.sh
tests/model/: conftest.py  model_tests.py  model_train.py
