[tool.poetry]
name = "sqat"
version = "0.1.0"
description = "code for vkr"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
scipy = "^1.13.0"
wget = "^3.2"
wandb = "^0.16.6"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"


[tool.poetry.group.dev-dependencies.dependencies]
pre-commit = "^3.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"




[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
# ignore = E203, E266, E501, W503, F403, F401
extend-ignore = """
        W503,
        E203,
        E701,
    """
max-line-length = 79
max-complexity = 18
# select = B,C,E,F,W,T4,B9

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
